--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,7 +1,15 @@
-<div *ngFor="let product of products">
-    <h2>{{ product.name.firstname }} {{ product.name.lastname }}</h2>
-    <p>Email: {{ product.email }}</p>
-    <p>Phone: {{ product.phone }}</p>
-    <p>Address: {{ product.address.street }}, {{ product.address.city }}</p>
+<div class="product-card-row">
+  <div class="product-card" *ngFor="let product of products">
+    <mat-card>
+      <img mat-card-image [src]="product.image" alt="{{ product.title }}">
+      <mat-card-content>
+        <h2>{{ product.title }}</h2>
+        <p>Price: ${{ product.price }}</p>
+        <p>Rating: {{ product.rating.rate }} ({{ product.rating.count }} reviews)</p>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button color="primary">View</button>
+      </mat-card-actions>
+    </mat-card>
   </div>
-  
+</div>
