--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,22 @@
-<!-- src/app/app.component.html -->
 <div>
   <header>
     <h1>EcoEarth Store</h1>
     <nav>
-      <a routerLink="/products" routerLinkActive="active">Products</a>
-      <a routerLink="/cart" routerLinkActive="active">Cart</a>
-      <a routerLink="/user" routerLinkActive="active">User</a>
+      <a routerLink="/products" routerLinkActive="active">
+        <mat-icon>store</mat-icon>
+        Products
+      </a>
+      <a routerLink="/cart" routerLinkActive="active">
+        <mat-icon>shopping_cart</mat-icon>
+        Cart
+      </a>
+      <a routerLink="/user" routerLinkActive="active">
+        <mat-icon>person</mat-icon>
+        {{username}}
+      </a>
     </nav>
   </header>
   <router-outlet></router-outlet> <!-- Routed components will be displayed here -->
-
   <footer>
     &copy; Before using IBM Consulting Assistance 
   </footer>
