--- a/src/app/product/product.component.css
+++ b/src/app/product/product.component.css
@@ -76,3 +76,13 @@ mat-card-content p {
     color: #fff;
     margin-top: 10px;
 }
+
+.performance-card {
+    max-width: 300px;
+    position: fixed;
+    top: 280px;
+    left: 940px;
+    z-index: 1000;
+    background-color: rgb(180, 184, 183);
+  }
+  
