--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<div class="main-content">
+
 <div>
   <header>
     <h1>EcoEarth Store</h1>
@@ -10,6 +12,7 @@
         <mat-icon>shopping_cart</mat-icon>
         Cart
       </a>
+
       <a routerLink="/user" routerLinkActive="active">
         <mat-icon>person</mat-icon>
         {{username}}
@@ -20,4 +23,5 @@
   <footer>
     &copy; Before using IBM Consulting Assistance 
   </footer>
+</div>
 </div>
