--- a/src/app/cart/cart.component.css
+++ b/src/app/cart/cart.component.css
@@ -20,3 +20,11 @@
 .quantity-price p {
   margin-left: 10px;
 }
+.performance-card {
+  max-width: 300px;
+  position: fixed;
+  top: 280px;
+  left: 940px;
+  z-index: 1000;
+  background-color: rgb(180, 184, 183);
+}
