--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,8 @@
   </header>
   <router-outlet></router-outlet> <!-- Routed components will be displayed here -->
   <footer>
-    &copy; Before using IBM Consulting Assistance 
+    &copy; Without using IBM Consulting Assistance 
   </footer>
 </div>
 </div>
+
