--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -7,3 +7,5 @@
   <p>Address: {{ user.address.street }}, {{ user.address.city }} {{ user.address.zipcode }}</p>
   <p>Geolocation: {{ user.address.geolocation.lat }}, {{ user.address.geolocation.long }}</p>
 </div>
+
+<button (click)="navigateToChat()">Go to IBM Chat</button>
