--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,32 +1,28 @@
-<mat-card class="performance-card">
-  <mat-card-header>
-    <mat-card-title><small>Performance Metrics</small></mat-card-title>
-  </mat-card-header>
-  <mat-card-content>
-    <small>API Response Time: <strong>{{ apiResponseTime }} ms</strong></small>
-    <mat-divider></mat-divider>
-    <div>
-      <small>Component Load Time (including API call): <strong>{{ loadTime }} ms</strong></small>
-    </div>
-  </mat-card-content>
-</mat-card>
 <div class="product-card-row">
-  <div class="product-card" *ngFor="let product of products">
-    <mat-card>
-      <div class="wishlist-icon">
-        <button mat-icon-button aria-label="Add to Wishlist">
-          <mat-icon>favorite_border</mat-icon>
-        </button>
-      </div>
-      <img mat-card-image [src]="product.image" alt="{{ product.title }}">
-      <mat-card-content>
-        <h2>{{ product.title }}</h2>
-        <p>Price: ${{ product.price }}</p>
-        <p>Rating: {{ product.rating.rate }} ({{ product.rating.count }} reviews)</p>
-      </mat-card-content>
-      <mat-card-actions>
-        <button mat-button color="primary">View</button>
-      </mat-card-actions>
-    </mat-card>
+  <div class="product-card" *ngFor="let productRow of productsChunked">
+    <div class="row">
+      <mat-card *ngFor="let product of productRow" class="product-card">
+        <div class="wishlist-icon">
+          <button mat-icon-button aria-label="Add to Wishlist">
+            <mat-icon>favorite_border</mat-icon>
+          </button>
+        </div>
+        <img mat-card-image [src]="product.image" alt="{{ product.title }}">
+        <mat-card-content>
+          <h2>{{ product.title }}</h2>
+          <p>Price: ${{ product.price }}</p>
+          <div class="product-rating">
+            <p>Rating:</p>
+            <mat-icon *ngFor="let _ of filledStars(product.rating.rate)" class="star-icon">star</mat-icon>
+            <mat-icon *ngFor="let _ of emptyStars(product.rating.rate)" class="star-icon">star_border</mat-icon>
+            <span>({{ product.rating.count }} reviews)</span>
+          </div>
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-button color="primary">View</button>
+          <button mat-button color="accent">Add to Cart</button>
+        </mat-card-actions>
+      </mat-card>
+    </div>
   </div>
 </div>
