--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,8 +26,10 @@
 
     </div>
     <router-outlet></router-outlet> <!-- Routed components will be displayed here -->
+    <app-chat></app-chat>
     <footer>
       &copy; Without using IBM Consulting Assistance
     </footer>
   </div>
 </div>
+
