--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,5 +1,6 @@
+<!-- product.component.html -->
 <div class="product-card-row">
-  <div class="product-card" *ngFor="let productRow of productsChunked">
+  <div class="product-card" *ngFor="let productRow of filteredProductsChunked">
     <div class="row">
       <mat-card *ngFor="let product of productRow" class="product-card">
         <div class="wishlist-icon">
@@ -19,8 +20,8 @@
           </div>
         </mat-card-content>
         <mat-card-actions>
-          <button mat-button color="primary">View</button>
-          <button mat-button color="accent">Add to Cart</button>
+          <button mat-button color="primary" (click)="viewProductDetails(product.id)">View</button>
+          <button mat-button color="accent" (click)="addToCart(product)">Add to Cart</button>
         </mat-card-actions>
       </mat-card>
     </div>
