--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -46,3 +46,22 @@
     </mat-card-content>
   </mat-card>
 </div>
+
+<div class="recently-viewed">
+  <h2>Recently Viewed</h2>
+  <div class="product-list1">
+    <div class="product-card1" *ngFor="let product of recentlyViewed">
+      <!-- Display product details as per your design -->
+      <img mat-card-image [src]="product.image" alt="{{ product.title }}">
+      <mat-card-content>
+        <h3>{{ product.title }}</h3>
+        <p class="product-rating1">Rating: {{ product.rating.rate }} ({{ product.rating.count }} reviews)</p>
+        <p class="product-price">Price: ${{ product.price }}</p>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button color="primary" >View</button>
+        <button mat-button color="accent" >Add to Cart</button>
+      </mat-card-actions>
+    </div>
+  </div>
+</div>
