--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -16,14 +16,15 @@
   }
   
   .product-card {
-    width: 300px;
+    width: 250px;
     margin-bottom: 20px;
   }
   
   .mat-card {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height:500px;
+    padding: 20px;
   }
   
   .wishlist-icon {
@@ -33,13 +34,11 @@
   }
   
   .product-card img {
-    height: 200px;
+    height: 120px;
     object-fit: cover;
+
   }
   
-  .mat-card-content {
-    flex-grow: 1;
-  }
   
   .product-rating {
     display: flex;
@@ -54,4 +53,62 @@
     display: flex;
     justify-content: space-between;
   }
-  
+
+  .mat-card-actions {
+    display: flex;
+    justify-content: center;
+}
+
+.mat-card-actions button {
+    background-color: #000;
+    color: #fff;
+    margin-top: 10px;
+}
+
+
+
+
+.performance-card {
+  max-width: 300px;
+  position: fixed;
+  top: 280px;
+  left: 940px;
+  z-index: 1000;
+  background-color: rgb(180, 184, 183);
+}
+.recently-viewed {
+  margin-bottom: 20px; /* Adjust margin as needed */
+}
+
+.product-list {
+  display: flex;
+  overflow-x: auto; /* Enable horizontal scrolling if needed */
+}
+
+.product-card-row {
+  display: flex;
+}
+
+.product-card {
+  width: 200px; /* Adjust card width as needed */
+  margin-right: 10px; /* Adjust spacing between cards */
+  border: 1px solid #ddd; /* Example border styling */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Example box shadow */
+}
+
+.product-card img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+.product-card-content {
+  padding: 10px;
+}
+
+.product-card-actions {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
