--- a/src/styles.css
+++ b/src/styles.css
@@ -7,3 +7,5 @@
     background-color: rgb(180, 184, 183);
   }
   
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
