proceed to checkout basic

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,10 @@
           <mat-icon>shopping_cart</mat-icon>
           Cart
         </a>
+        <a routerLink="/purchased-history" routerLinkActive="active">
+          <mat-icon>shopping_cart</mat-icon>
+          Orders
+        </a>
         <a routerLink="/user" routerLinkActive="active">
           <mat-icon>person</mat-icon>
           {{ username }}
