--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,5 @@
+<app-image-slider [images]="sliderImages"></app-image-slider>
+
 <div>
   <app-product-recommendations></app-product-recommendations>
   </div>
